--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,18 +19,17 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.DEPLOY_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan ssh.hellocode.be >> ~/.ssh/known_hosts
+          ssh-keyscan productionserver.be >> ~/.ssh/known_hosts
           
       - name: Deploy to server
         run: |
-          # Use rsync with relative path (from home directory)
           rsync -avz --exclude '.git/' \
                      --exclude '.github/' \
                      --exclude 'node_modules/' \
                      --exclude '.env' \
                      --exclude '.env.example' \
-                     ./ hellocodebe@ssh.hellocode.be:subsites/fullstack.be/
+                     ./ productionserverbe@ssh.productionserver.be:www/massimo/
           
       - name: Post-deployment commands
         run: |
-          ssh hellocodebe@ssh.hellocode.be "cd subsites/fullstack.be && bash post-deploy.sh"
+          ssh productionserverbe@ssh.productionserver.be "cd www/massimo && bash post-deploy.sh"
