--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.DEPLOY_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan productionserver.be >> ~/.ssh/known_hosts
+          ssh-keyscan -H productionserver.be >> ~/.ssh/known_hosts
           
       - name: Deploy to server
         run: |
