--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,27 +9,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          
-      - name: Setup deploy key
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.DEPLOY_SSH_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H productionserver.be >> ~/.ssh/known_hosts
-          
-      - name: Deploy to server
-        run: |
-          rsync -avz --exclude '.git/' \
-                     --exclude '.github/' \
-                     --exclude 'node_modules/' \
-                     --exclude '.env' \
-                     --exclude '.env.example' \
-                     ./ productionserverbe@ssh.productionserver.be:www/massimo/
-          
-      - name: Post-deployment commands
-        run: |
-          ssh productionserverbe@ssh.productionserver.be "cd www/massimo && bash post-deploy.sh"
+    - name: Checkout code
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+    
+    - name: Deploy to server using SSH Action
+      uses: appleboy/ssh-action@master
+      with:
+        host: productionserver.be
+        username: productionserverbe
+        key: ${{ secrets.DEPLOY_SSH_KEY }}
+        script: |
+          mkdir -p www/massimo
+            
+    - name: Deploy files using SCP Action
+      uses: appleboy/scp-action@master
+      with:
+        host: productionserver.be
+        username: productionserverbe
+        key: ${{ secrets.DEPLOY_SSH_KEY }}
+        source: "."
+        target: "www/massimo"
+        rm: false
+
+    - name: Run post-deployment script
+      uses: appleboy/ssh-action@master
+      with:
+        host: productionserver.be
+        username: productionserverbe
+        key: ${{ secrets.DEPLOY_SSH_KEY }}
+        script: cd www/massimo && bash post-deploy.sh
