--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,15 +14,14 @@ jobs:
         with:
           fetch-depth: 0
           
-      - name: Setup deploy key
-        run: |
-          mkdir -p $GITHUB_WORKSPACE/ssh
-          printf '%b' "${{ secrets.DEPLOY_SSH_KEY }}" > $GITHUB_WORKSPACE/ssh/id_rsa
-          chmod 600 $GITHUB_WORKSPACE/ssh/id_rsa
+      - name: Install SSH key
+        uses: webfactory/ssh-agent@v0.8.0
+        with:
+          ssh-private-key: ${{ secrets.DEPLOY_SSH_KEY }}
           
       - name: Deploy to server
         run: |
-          rsync -e "ssh -i $GITHUB_WORKSPACE/ssh/id_rsa -o StrictHostKeyChecking=no" -avz --exclude '.git/' \
+          rsync -e "ssh -o StrictHostKeyChecking=no" -avz --exclude '.git/' \
                      --exclude '.github/' \
                      --exclude 'node_modules/' \
                      --exclude '.env' \
@@ -31,4 +30,4 @@ jobs:
           
       - name: Post-deployment commands
         run: |
-          ssh -i $GITHUB_WORKSPACE/ssh/id_rsa -o StrictHostKeyChecking=no productionserverbe@ssh.productionserver.be "cd www/massimo && bash post-deploy.sh"
+          ssh -o StrictHostKeyChecking=no productionserverbe@ssh.productionserver.be "cd www/massimo && bash post-deploy.sh"
