Initialize Laravel project structure with basic routing, testing, and storage configurations
- Added console command for inspiring quotes in routes/console.php
- Created web route for the home page in routes/web.php
- Set up .gitignore files for storage directories to exclude unnecessary files
- Implemented basic feature test to check successful response from home route
- Established unit test to verify true is true
- Configured Vite for asset management with Laravel and Tailwind CSS

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,10 @@ jobs:
                      --exclude '.env.example' \
                      ./ productionserverbe@ssh.productionserver.be:www/massimo/
           
+      - name: Make post-deploy script executable
+        run: |
+          ssh -o StrictHostKeyChecking=no productionserverbe@ssh.productionserver.be "chmod +x ~/www/massimo/post-deploy.sh"
+          
       - name: Post-deployment commands
         run: |
           ssh -o StrictHostKeyChecking=no productionserverbe@ssh.productionserver.be "cd www/massimo && bash post-deploy.sh"
